# bytecon

./: README.md
bytecon-backend-main/: .gitignore  .gitlab-ci.yml  README.md  compose.yaml  requirements.txt
bytecon-backend-main/calendar_service/: Dockerfile  app.py  conftest.py  models.py  oauth2.py  requirements.txt  test_app.py
bytecon-backend-main/calendar_service/api/: api_utils.py  rabbit_consumer_calendar.py  resolvers.py  schema.graphql  schema.py
bytecon-backend-main/event_service/: Dockerfile  app.py  conftest.py  filter_strategy.py  models.py  requirements.txt  test_app.py  utils.py
bytecon-backend-main/event_service/api/: resolvers.py  schema.graphql  schema.py
bytecon-backend-main/frontend/: junit.xml  package-lock.json  package.json
bytecon-backend-main/frontend/src/: App.js  App.test.js  ProtectedRoutes.js  index.js
bytecon-backend-main/frontend/src/components/: CategoryDropDownBtn.js  ChangedBar.js  ConfirmPasswordField.js  DateDropDownBtn.js  DateTimePickerComponent.js  DistanceDropDownBtn.js  EmailField.js  (+8 more)
bytecon-backend-main/shared/: pyproject.toml  setup.cfg
bytecon-backend-main/shared/azure/: access_azure_storage.py  access_key_vault.py
bytecon-backend-main/shared/rabbitmq/: event_types.py  rabbit_consumer.py  rabbit_provider.py
bytecon-backend-main/shared/shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bytecon-backend-main/user_service/: Dockerfile  app.py  conftest.py  models.py  oauth2.py  requirements.txt  test_app.py  utils.py
bytecon-backend-main/user_service/api/: resolvers.py  schema.graphql  schema.py
(+26 files in other folders)
